--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,14 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.github.faradaj:PatternedEditText:v1.0'
 }
