--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.github.faradaj:PatternedEditText:v1.0'
+    compile 'com.google.guava:guava:18.0'
 }
